--- a/index.html
+++ b/index.html
@@ -6,10 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Website/title>
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <h1>SÃO PAULO</h1>
+        <h2>city</h2>
+    </header>
+    <section class="section1">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
+            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
+            in consequatur non numquam?</p>
+    </section>
+    <section class="section2">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
+            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
+            in consequatur non numquam?</p>
+    </section>
+    <section class="section3">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
+            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
+            in consequatur non numquam?</p>s
+    </section>
+    <footer></footer>
 
 </body>
 
