Upgrade: section-RA_Registro

--- a/index.html
+++ b/index.html
@@ -5,31 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Website/title>
-        <link rel="stylesheet" href="style.css">
+    <title>Parallax Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>SÃO PAULO</h1>
-        <h2>city</h2>
+    <header class="header">
+        <nav class="home">HOME</nav>
+        <nav class="contact">CONTACT</nav>
+        <nav class="saiba_mais">SAIBA MAIS</nav>
+
     </header>
-    <section class="section1">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
-            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
-            in consequatur non numquam?</p>
-    </section>
-    <section class="section2">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
-            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
-            in consequatur non numquam?</p>
-    </section>
-    <section class="section3">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum magni obcaecati eaque laudantium tempora
-            explicabo quidem sit, facilis doloremque laboriosam voluptate ullam temporibus delectus ratione consectetur
-            in consequatur non numquam?</p>s
-    </section>
-    <footer></footer>
+    <main>
+
+        <h1>PARALLAX WEBSITE</h1>
+        <section class="regiao-administrativa-de-registro">Região Administrativa de Registro</section>
+        <section class="text-registro">
+            <p>Com vista <a
+                    href="https://s3.amazonaws.com/registro.portaldacidade.com/img/news/editor/registro-5b0481be8c2b4.jpg"
+                    target="_blank">panorâmica do Rio Ribeira</a>, o “Parque Prefeito José de Carvalho”, mais conhecido
+                como Praça Beira Rio, está anexo ao SESC/KKKK e possui ampla área de lazer, dentre elas uma ciclovia e
+                pista de
+                skate. No centro da praça está o <a
+                    href="https://registro.sp.gov.br/turismo/praca-beira-rio-monumento-guaracui/">Monumento
+                    Guaracuí</a>, uma tulipa de aço estilizada com sete metros de
+                altura doada pela artista plástica <a href="https://pt.wikipedia.org/wiki/Tomie_Ohtake">Tomie Ohtake</a>
+                no ano de 2002, em homenagem aos imigrantes japoneses.
+
+                A Flor de Guaracuí (uma flor estilizada de 7 metros de altura e 40 toneladas em aço) – É uma escultura
+                doada ao município pela artista plástica <a href="https://pt.wikipedia.org/wiki/Tomie_Ohtake">Tomie
+                    Ohtake</a>, no ano de 2002, em homenagem aos imigrantes
+                japoneses. A inspiração para a obra teria sido uma enorme árvore de Guaracuí (Andira Antelmia) que
+                existiu na avenida principal de Registro, e que, de qualquer ponto da cidade era possível avistá-la,
+                tornando-se então, um dos símbolos do município.</p>
+            <p>
+                Texto e imagem extraido do <a
+                    href="https://registro.sp.gov.br/turismo/praca-beira-rio-monumento-guaracui/"
+                    target="_blank">site</a>
+                da Prefeitura de Registro/SP.
+            </p>
+        </section>
+
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+
+
+    </main>
+
+    <footer class="footer">
+        <p>Site PARALLAX desenvolvido por <a href="https://github.com/k3L0w">Antonio Pereira</a></p>
+    </footer>
+
+
 
 </body>
 
