Upgrade: background-RMBS

--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
         <section class="text-registro">
             <p>Com vista <a
                     href="https://s3.amazonaws.com/registro.portaldacidade.com/img/news/editor/registro-5b0481be8c2b4.jpg"
-                    target="_blank">panorâmica do Rio Ribeira</a>, o “Parque Prefeito José de Carvalho”, mais conhecido
-                como Praça Beira Rio, está anexo ao SESC/KKKK e possui ampla área de lazer, dentre elas uma ciclovia e
+                    target="_blank">panorâmica do Rio Ribeira</a>, o “Parque Prefeito José de Carvalho”, mais
+                conhecido
+                como Praça Beira Rio, está anexo ao SESC/KKKK e possui ampla área de lazer, dentre elas uma
+                ciclovia e
                 pista de
                 skate. No centro da praça está o <a
                     href="https://registro.sp.gov.br/turismo/praca-beira-rio-monumento-guaracui/">Monumento
                     Guaracuí</a>, uma tulipa de aço estilizada com sete metros de
-                altura doada pela artista plástica <a href="https://pt.wikipedia.org/wiki/Tomie_Ohtake">Tomie Ohtake</a>
+                altura doada pela artista plástica <a href="https://pt.wikipedia.org/wiki/Tomie_Ohtake">Tomie
+                    Ohtake</a>
                 no ano de 2002, em homenagem aos imigrantes japoneses.
 
-                A Flor de Guaracuí (uma flor estilizada de 7 metros de altura e 40 toneladas em aço) – É uma escultura
+                A Flor de Guaracuí (uma flor estilizada de 7 metros de altura e 40 toneladas em aço) – É uma
+                escultura
                 doada ao município pela artista plástica <a href="https://pt.wikipedia.org/wiki/Tomie_Ohtake">Tomie
                     Ohtake</a>, no ano de 2002, em homenagem aos imigrantes
-                japoneses. A inspiração para a obra teria sido uma enorme árvore de Guaracuí (Andira Antelmia) que
-                existiu na avenida principal de Registro, e que, de qualquer ponto da cidade era possível avistá-la,
+                japoneses. A inspiração para a obra teria sido uma enorme árvore de Guaracuí (Andira Antelmia)
+                que
+                existiu na avenida principal de Registro, e que, de qualquer ponto da cidade era possível
+                avistá-la,
                 tornando-se então, um dos símbolos do município.</p>
             <p>
                 Texto e imagem extraido do <a
@@ -46,24 +52,74 @@
             </p>
         </section>
 
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
-        <section class=""></section>
+        <section class="regiao-metropolitana-da-baixada-santista">Região Metropolitana da Baixada Santista
+        </section>
+
+        <section class="text-baixadaSantista">
+            <p><a href="https://www.praiagrande.sp.gov.br/HomePortal-.asp?cd_pagina=71">Praia Grande</a> é um município
+                na Região Metropolitana da Baixada Santista, Litoral Sul do estado de
+                São
+                Paulo, Brasil. Integra a Região Imediata de <a href="https://www.santos.sp.gov.br/">Santos</a> e sua
+                população aferida na revisão
+                censitária
+                do IBGE
+                em 2010 era de 262 051 habitantes. Na estimativa do IBGE para 1.º de julho de 2021, a população
+                de Praia
+                Grande era de 336 454 habitantes.[1] É a terceira cidade mais populosa do litoral paulista,
+                depois de
+                <a href="https://www.saovicente.sp.gov.br/onepage">São Vicente</a> e Santos. Com uma área de 149,652
+                km², a densidade demográfica em 2010 era de
+                1 781,87
+                habitantes/km².[1] A densidade estimada para julho de 2021 era de 2 248,2 habitantes/km². O
+                município é
+                formado pela sede e pelo distrito de Solemar.[4][5]
+            </p>
+            <p>Texto e imagens extraidos do site <a
+                    href="Praia Grande é um município na Região Metropolitana da Baixada Santista, Litoral Sul do estado de São Paulo, Brasil. Integra a Região Imediata de Santos e sua população aferida na revisão censitária do IBGE em 2010 era de 262 051 habitantes. Na estimativa do IBGE para 1.º de julho de 2021, a população de Praia Grande era de 336 454 habitantes.[1] É a terceira cidade mais populosa do litoral paulista, depois de São Vicente e Santos. Com uma área de 149,652 km², a densidade demográfica em 2010 era de 1 781,87 habitantes/km².[1] A densidade estimada para julho de 2021 era de 2 248,2 habitantes/km². O município é formado pela sede e pelo distrito de Solemar.[4][5] "
+                    target="_blank">wikipedia.</a> Direitos autorais: <a
+                    href="https://web.archive.org/web/20161016180948/http://www.panoramio.com/user/4462463?with_photo_id=46047311">Jacinto@lves
+                    de Souz…</a></p>
+        </section>
+
+        <section class="regiao-Administrativa-de-Sao-Jose-dos-Campos">Região Administrativa de São José dos Campos
+        </section>
+
+        <section class="Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte">Região Metropolitana do Vale do Paraiba
+            e Litoral Norte</section>
+
+        <section class="Regiao-Administrativa-de-Sorocaba">Regiao Administrativa de Sorocaba</section>
+
+        <section class="Regiao-Metropolitana-de-Sorocaba">Região Metropolitana de Sorocaba</section>
+
+        <section class="Regiao-Administrativa-e-Metropolitana-de-Campinas">Região Administrativa e Metropolitana de
+            Campinas</section>
+
+        <section class="Regiao-Administrativa-de-Ribeirão-Preto">Região Administrativa de Ribeirão Preto</section>
+
+        <section class="Regiao-Metropolitana-de-Ribeirão-Preto">Região Metropolitana de Ribeirão Preto</section>
+
+        <section class="Regiao-Administrativa-de-Bauru">Região Administrativa de Bauru</section>
+
+        <section class="Regiao-Administrativa-de-Sao-Jose-do-Rio-Preto">Região Administrativa de São José do Rio Preto
+        </section>
+
+        <section class="Região-Administrativa-de-Araçatuba">Região Administrativa de Araçatuba</section>
+
+        <section class="Regiao-Administrativa-de-Presidente-Prudente">Região Administrativa de Presidente Prudente
+        </section>
+
+        <section class="Regiao-Administrativa-de-Marília">Região Administrativa de Marília</section>
+
+        <section class="Regiao-Administrativa-Central">Região Administrativa Central</section>
+
+        <section class="Regiao-Administrativa-de-Barretos">Região Administrativa de Barretos</section>
+
+        <section class="Regiao-Administrativa-de-Franca">Região Administrativa de Franca</section>
+
+        <section class="Regiao-Administrativa-de-Itapeva">Região Administrativa de Itapeva</section>
+
+        <section class="Regiao-Metropolitana-de-São-Paulo">Região Metropolitana de São Paulo</section>
+
 
 
     </main>
