--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 
         <section class="regiao-metropolitana-da-baixada-santista">Região Metropolitana da Baixada Santista
         </section>
-
         <section class="text-baixadaSantista">
             <p><a href="https://www.praiagrande.sp.gov.br/HomePortal-.asp?cd_pagina=71">Praia Grande</a> é um município
                 na Região Metropolitana da Baixada Santista, Litoral Sul do estado de
@@ -81,46 +80,175 @@
                     de Souz…</a></p>
         </section>
 
+
         <section class="regiao-Administrativa-de-Sao-Jose-dos-Campos">Região Administrativa de São José dos Campos
         </section>
+        <section class="text-regiao-Administrativa-de-Sao-Jose-dos-Campos">
+            <p>São José dos Campos (pronúncia em português: [sɐ̃w̃ ʒuˈzɛ dus ˈkɐ̃pus]) é um município brasileiro no
+                interior do estado de São Paulo. Está situado no Vale do Paraíba Paulista, a leste da capital do
+                estado.
+                É sede da Região Metropolitana do Vale do Paraíba e Litoral Norte e ocupa uma área de 1 099,409km²,
+                da
+                qual 353,9 km² estão em perímetro urbano. Em 2021, sua população foi estimada pelo IBGE em 737 310
+                habitantes,[1] sendo o quinto mais populoso de São Paulo e o 23.º de todo o país, além de ser o
+                segundo
+                município mais populoso do interior do Brasil, ficando atrás somente de Campinas. O município está
+                integrado — junto com as regiões metropolitanas de São Paulo, Campinas, Sorocaba e Baixada Santista
+                — ao
+                Complexo Metropolitano Expandido, uma megalópole que ultrapassa os trinta milhões de habitantes
+                (cerca
+                75% da população paulista) e que é a primeira aglomeração urbana do tipo no hemisfério sul.</p>
+            <p>Texto e imagens extraidos do <a href="https://pt.wikipedia.org/wiki/S%C3%A3o_Jos%C3%A9_dos_Campos"
+                    target="_blank">wikipedia. </a>
+            <p>Author da foto: <a
+                    href="https://web.archive.org/web/20161022122520/http://www.panoramio.com/photo/61168307"
+                    target="_blank">Rodrigo
+                    Gelmi</a>
+        </section>
 
-        <section class="Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte">Região Metropolitana do Vale do Paraiba
-            e Litoral Norte</section>
+        <section class="Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte">Região Metropolitana do
+            Vale do Paraiba e Litoral Norte
+        </section>
+        <section class="text-Regiao-Metropolitana-do-Vale-do-Paraiba-e-Litoral-Norte">
+
+
+            <p>A <a href="https://www.emtu.sp.gov.br/emtu/institucional/quem-somos/vale-do-paraiba-e-litoral-norte.fss"
+                    target="_blank">Região
+                    Metropolitana do Vale do Paraíba e Litoral Norte</a> ou RMVale, criada pela lei complementar
+                estadual 1166, de 9 de janeiro de 2012,[3][4] é uma das seis regiões metropolitanas do estado de São
+                Paulo e pertence à Macrometrópole de São Paulo. É formada pela união de 39 municípios agrupados em
+                cinco
+                sub-regiões. Compreende os mesmos municípios da Mesorregião do Vale do Paraíba Paulista e tem <a
+                    href="https://www.sjc.sp.gov.br/" target="_blank">
+                    São
+                    José
+                    dos Campos
+                </a> como sua cidade-sede. </p>
+            <p>Texto extraido do <a
+                    href="https://pt.wikipedia.org/wiki/Regi%C3%A3o_Metropolitana_do_Vale_do_Para%C3%ADba_e_Litoral_Norte">wikipedia</a>.
+            </p>
+            <p>Foto extraída do site <a
+                    href="https://peakvisor.com/photo/4/4f/Pico_da_Gomeira_Serra_da_Mantiqueira_January_2014.jpg">peakvisor.com</a>
+            </p>
+        </section>
+
 
         <section class="Regiao-Administrativa-de-Sorocaba">Regiao Administrativa de Sorocaba</section>
+        <section class="text-Regiao-Administrativa-de-Sorocaba">
+            <p>
+                Caracterizando-se como a terceira área de concentração da população paulista, a RA de Sorocaba vem apresentando, nos últimos anos, um intenso crescimento populacional. </p>
+            <p>Texto extraido do <a href="https://www.al.sp.gov.br/noticia/?id=290540">Site</a>.</p>
+            <p>Foto extraída do <a href="https://noticias.sorocaba.sp.gov.br/regiao-administrativa-de-sorocaba-tem-segundo-maior-crescimento-do-pib-do/">site</a>.</p>
+            
+        </section>
 
         <section class="Regiao-Metropolitana-de-Sorocaba">Região Metropolitana de Sorocaba</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
-        <section class="Regiao-Administrativa-e-Metropolitana-de-Campinas">Região Administrativa e Metropolitana de
+        <section class="Regiao-Administrativa-e-Metropolitana-de-Campinas">Região Administrativa e
+            Metropolitana de
             Campinas</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
-        <section class="Regiao-Administrativa-de-Ribeirão-Preto">Região Administrativa de Ribeirão Preto</section>
+        <section class="Regiao-Administrativa-de-Ribeirão-Preto">Região Administrativa de Ribeirão Preto
+        </section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
-        <section class="Regiao-Metropolitana-de-Ribeirão-Preto">Região Metropolitana de Ribeirão Preto</section>
+        <section class="Regiao-Metropolitana-de-Ribeirão-Preto">Região Metropolitana de Ribeirão Preto
+        </section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Administrativa-de-Bauru">Região Administrativa de Bauru</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
-        <section class="Regiao-Administrativa-de-Sao-Jose-do-Rio-Preto">Região Administrativa de São José do Rio Preto
+        <section class="Regiao-Administrativa-de-Sao-Jose-do-Rio-Preto">Região Administrativa de São
+            José do
+            Rio Preto
+        </section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
         </section>
 
         <section class="Região-Administrativa-de-Araçatuba">Região Administrativa de Araçatuba</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
-        <section class="Regiao-Administrativa-de-Presidente-Prudente">Região Administrativa de Presidente Prudente
+        <section class="Regiao-Administrativa-de-Presidente-Prudente">Região Administrativa de
+            Presidente
+            Prudente
+        </section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
         </section>
 
         <section class="Regiao-Administrativa-de-Marília">Região Administrativa de Marília</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Administrativa-Central">Região Administrativa Central</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Administrativa-de-Barretos">Região Administrativa de Barretos</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Administrativa-de-Franca">Região Administrativa de Franca</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Administrativa-de-Itapeva">Região Administrativa de Itapeva</section>
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
         <section class="Regiao-Metropolitana-de-São-Paulo">Região Metropolitana de São Paulo</section>
-
-
+        <section>
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
 
     </main>
 
